release/1.12.1/VERSION.md
# 1.12.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.12.1```   |
| Release Time   | ```2017-08-03T12:40:39+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.12```   |
| sha1   | ```a21e1ded1a24ea1548dd8db0cf30b6acb02655a9```   |
| size   | ```143136```   |
| total size  | ```129843781```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/a21e1ded1a24ea1548dd8db0cf30b6acb02655a9/1.12.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```83385d346cf7f97d1e447b888750fb88e9928b93```   |
| size   | ```10178558```   |
| url       | ```https://piston-data.mojang.com/v1/objects/83385d346cf7f97d1e447b888750fb88e9928b93/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```561c7b2d54bae80cc06b05d950633a9ac95da816```   |
| size   | ```30221337```   |
| url       | ```https://piston-data.mojang.com/v1/objects/561c7b2d54bae80cc06b05d950633a9ac95da816/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |