release/1.12.2/VERSION.md
# 1.12.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.12.2```   |
| Release Time   | ```2017-09-18T08:39:46+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.12```   |
| sha1   | ```a21e1ded1a24ea1548dd8db0cf30b6acb02655a9```   |
| size   | ```143136```   |
| total size  | ```129843781```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/a21e1ded1a24ea1548dd8db0cf30b6acb02655a9/1.12.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```0f275bc1547d01fa5f56ba34bdc87d981ee12daf```   |
| size   | ```10180113```   |
| url       | ```https://piston-data.mojang.com/v1/objects/0f275bc1547d01fa5f56ba34bdc87d981ee12daf/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```886945bfb2b978778c3a0288fd7fab09d315b25f```   |
| size   | ```30222121```   |
| url       | ```https://piston-data.mojang.com/v1/objects/886945bfb2b978778c3a0288fd7fab09d315b25f/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |